# haskell

./: README.md
BM-courses/construct-yourself/src/Construction/Internal/: Functions.hs  Parser.hs
BM-courses/construct-yourself/test/: ParseSpec.hs
ITMO-Course/: LICENSE  README.md  stack.yaml  test.hs
ITMO-Course/hw1/: hw1.cabal
ITMO-Course/hw1/src/: Block1.hs  Block2.hs  Block3.hs  Game.hs  Main.hs  MaybeConcat.hs  Monoids.hs  Nat.hs  SplitOn.hs  Test.hs  Tree.hs  TreePrinters.hs  Vector.hs
stack/: README.md  package.yaml
stack/src/: BubbleSort.hs  Cps.hs  Dfs.hs  Except.hs  Fork.hs  Lib.hs  Monad.hs  Monad1.hs  Parallel.hs  Parse.hs  Socket.hs  Test.hs  Worker.hs
usefull/: AMP.hs  FTP.hs  Lens.hs  Loop.hs  knight.hs  test.hs  types.hs
usefull/parser/: errorcheck.hs  eval.hs  rpn.hs
