name:                hw1
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/mortum5/Haskell/ITMO-course#readme
license:             MIT
license-file:        LICENSE
author:              Andrew Gonchar
maintainer:          jeron312@gmail.com
copyright:           2017 Andrew Gonchar
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hw1
  ghc-options:         -Wall -fno-warn-type-defaults 
  hs-source-dirs:      src
  other-modules:       Tree
                     , Nat
                     , MaybeConcat
                     , Game
                     , SplitOn
                     , Block1
                     , Block2
                     , Block3
                     , TreePrinters
                     , Test
  build-depends:       mtl
                     , lens
                     , QuickCheck 
                     , hspec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
